# notion4ever

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
_sass/: _base.scss  _layout.scss  custom-styles.scss
_templates/: _head.html  _header.html
notion4ever/: __main__.py  markdown_parser.py  notion2json.py  site_generation.py  structuring.py
