[tool.poetry]
name = "notion4ever"
version = "0.1.0"
description = ""
authors = ["Leo Lin <karta09104@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.5"
libsass = "^0.23.0"
markdown = "^3.7"
notion-client = "^2.3.0"
python-dateutil = "^2.9.0.post0"
mdx-truly-sane-lists = "^1.3"
pymdown-extensions = "^10.14.3"
markdown-captions = "^2.1.2"
markdown-checklist = "^0.4.4"
pygments = "^2.19.1"
markdown-mermaidjs = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pyright = "^1.1.394"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]